# bq-query-unittest

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: action.yml  release.yml
bqqtest/: table.py  table_test.py  util.py  util_test.py
bqqtest/testdata/: test3.json  test6.json
bqtest/: __init__.py  table.py  table_test.py
querytest/: table.py  table_test.py
querytest/testdata/: test1.csv  test2.json  test4.json  test5.json
